--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         $('.loginButton').on('click', function(event) {
             if (nombreUsuario.val() != "" && pass.val() != "") {
                 $.post('/login',{user: nombreUsuario.val(), pass: pass.val()}, function(response) {
+                    console.log(respoonse);
                     if (response == "Validado") {
                         window.location.href = window.location.href + "/main.html";
                     }
