--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         $('.loginButton').on('click', function(event) {
             console.log("hola");
             if (nombreUsuario.val() != "" && pass.val() != "") {
-                $.post('server/index.js',{user: nombreUsuario.val(), pass: pass.val()}, function(response) {
+                $.post('/login',{user: nombreUsuario.val(), pass: pass.val()}, function(response) {
                     console.log(response);
                     if (response == "Validado") {
                         window.location.href = window.location.href + "/main.html";
